Fix sidebar (links, translations) and change CSS to account for new <a> element
Sidebar links are in correct order and link to correct pages

Added a new translation domain, 'yelp-endless', in which we mark
new UI strings arising from our modifications for translation. New
strings have to go in data/domains/yelp-endless.xml.in, after which the
.pot file must be updated with "make -C data/domains yelp.pot".

Adding links to the sidebar messed up the CSS, so we made a small
edit that made it look approximately as it was before.

Also, .xml.in -> .xml rule puts temp files in temp dir: Since there can
now be more than one .xml target being built from an .xml.in file,
potentially in parallel, make sure all their temp files are unique to
each process so that one target's process can't remove another target's
process's temp files.

(Roberto, Patrick, Philip)

[endlessm/eos-sdk#2233]

--- a/data/endless/css/eos-help-center-style.css
+++ b/data/endless/css/eos-help-center-style.css
@@ -289,9 +289,6 @@ body {
 }
 
 #accordion li a {
-    color: #fff;
-    display: block;
-    padding: 0;
     text-decoration: none;
 }
 
